生产环境配置

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-# VUE_APP_BASE_API = 'http://yiban.glmc.edu.cn/bx'
+VUE_APP_BASE_API = 'https://yiban.glmc.edu.cn/bx'
 VUE_APP_CONFIG = 'static/config.json'
 
